--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                 title: "Truecaller",
                 category: "Communication",
                 poster: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRD0lJb5nR_P78H-KY_9dijC59W14Xdvj8v8w&s",
-                downloadLink: "https://filenext.org/c5ecdea3e1e419a6?ref=9218ccb6b1b65f7e4a31fa79909613d9",
+                downloadLink: "https://dl.gamedva.top/App/Truecaller-v15.18.6-mod-GameDVA.com.apk",
                 description: "Caller ID, spam blocking & call recording",
                 downloads: "500M+",
                 size: "45 MB"
@@ -655,7 +655,7 @@
                 title: "Spotify",
                 category: "Music",
                 poster: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWmecNDAjiOKtCmSMtziuaWx92c5DvttjxQhwEAScyPOi_7mlrgGODbojU&s=10",
-                downloadLink: "https://filenext.org/4e67532265a45776?ref=69194501016626e4bc40b8aae2cb588d",
+                downloadLink: "https://dl.gamedva.top/App/Spotify-v9.0.56.347-mod-GameDVA.com.apk",
                 description: "Music and podcasts streaming platform",
                 downloads: "1B+",
                 size: "80 MB"
