--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
         <div class="footer-bg"></div>
         <div class="footer-content">
             <p class="footer-text">Site owner: Tartil Hossain</p>
-            <p class="footer-subtext">© 2024 All Rights Reserved</p>
+            <p class="footer-subtext">© 2025 All Rights Reserved</p>
         </div>
     </footer>
 
@@ -745,7 +745,7 @@
                 <button id="submitPasskey" class="submit-passkey">Submit</button>
                 
                 <div class="payment-instruction">
-                    <strong>Payment required:</strong> Send payment to <strong>01715783544 (TARTIL)</strong> via bKash/Nagad to receive your passkey.
+                    <strong>Payment required:</strong> Send payment to <strong>01715783544 (TARTIL)</strong> via Nagad to receive your passkey.
                 </div>
             </div>
         </div>
